--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "description": "",
   "dependencies": {
     "express": "^5.1.0",
+    "mongodb": "^6.17.0",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
